[tool.poetry]
name = "vulpes"
version = "0.1.0"
description = ""
authors = ["June <june@peanut.one>"]

[tool.poetry.dependencies]
python = "^3.10.0"
boto3 = "^1.33.7"
Flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
podgen = "^1.1.0"
sqlalchemy = "^2.0.25"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
