[tool.poetry]
name = "vulpes"
version = "1.0.0"
description = ""
authors = ["June <june@peanut.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
boto3 = "^1.33.7"
Flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
podgen = "^1.1.0"
sqlalchemy = "^2.0.25"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.11"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [  # Brought over whole-cloth from another project of mine.
    "E", "E501", "I", "D",
    "N", "F", "UP",
    "BLE", "B", "COM", "C4",
    "DTZ", "RET", "SLF", "SIM",
]
ignore = [
    "D100", "D104", "D107", "D203", "D213", "D400",
    "S113"
]

[tool.ruff.isort]
relative-imports-order = "closest-to-furthest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
