[tool.poetry]
name = "vulpes"
version = "2.4.2"
description = ""
authors = ["June <june@peanut.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
alembic = "^1.13.1"
boto3 = "^1.33.7"
Flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
requests = "^2.31.0"
sqlalchemy = "^2.0.25"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.11"

[tool.ruff]
line-length = 79
exclude = ["nitre/"]

[tool.ruff.lint]
select = [
    "E", "E501", "I", "D", "Q",
    "N", "F", "UP", "TD", "W",
    "BLE", "B", "COM", "C4",
    "DTZ", "RET", "SLF", "SIM",
]
ignore = [
    "D100", "D104", "D107", "D203", "D213", "D400",
    "S113",
    "TD003",
]

[tool.ruff.isort]
relative-imports-order = "closest-to-furthest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
